--- a/style.css
+++ b/style.css
@@ -1,2 +1,96 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+  
+.header {
+    height: 72px;
+    font-size: 32px;
+    font-weight: 900;
+    background: #1F2937;
+    color: #ad3737;
+    padding: 0 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+.header .links {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    gap: 18px;
+  }
+
+.header a {
+    text-decoration: none;
+    color: #e5e7eb;
+    font-size: 18px;
+  }
+
+.header .logo {
+    color: #f9faf8;
+    font-size: 24px;
+  }
+  
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 72px;
+    background: #1F2937;
+    color: #eee;
+  }
+  
+.body {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+  }
+
+.sign-up {
+    background-color: #3882f6;
+    border-radius: 4px;
+    border-width: 1px;
+    border-style: solid;
+    padding: 4px 12px;
+}
+
+.sign-up.cta-button{
+    border-color: #ffffff;
+    color: #eee;
+}
+
+.reasons h2 {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+}
+  
+.quote {
+    background-color: #e5e7eb;
+}
+
+.quote .words {
+    font-size: 36px;
+    color: #1f2937;
+    font-style: italic;
+}
+
+.cta-card {
+    background-color: #3882f6;
+    max-width: 300px;
+    color: #eee;
+    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+    border-radius: 4px;
+    padding: 16px;
+    margin: 0;
+  }
