--- a/style.css
+++ b/style.css
@@ -1,50 +1,86 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+    width: 100%;
   }
   
-.header {
-    height: 72px;
+.hero-header {
     font-size: 32px;
     font-weight: 900;
     background: #1F2937;
-    color: #ad3737;
-    padding: 0 16px;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
   }
 
-.header .links {
+.header {
     display: flex;
+    justify-content: space-between;
+    font-size: 32px;
+    font-weight: 900;
+    width: 100%;
+    max-width: 1200px;
+  }
+
+.header .links, .header .logo{
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+}
+
+.header .links {
     list-style: none;
-    margin: 0;
-    padding: 0;
     gap: 18px;
+    font-size: 18px;
+    justify-content: flex-end;
   }
 
 .header a {
     text-decoration: none;
     color: #e5e7eb;
-    font-size: 18px;
   }
 
 .header .logo {
     color: #f9faf8;
     font-size: 24px;
   }
+
+.hero {
+    display: flex;
+    align-items: center;
+    padding: 48px 0;
+    gap: 48px;
+    max-width: 1200px;
+}
+
+.hero h1 {
+    font-size: 48px;
+    color: #f9faf8;
+}
+
+.hero p {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.hero-right {
+    margin-left: auto;
+}
   
 .footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 72px;
+    height: 40px;
     background: #1F2937;
     color: #eee;
   }
@@ -58,15 +94,27 @@ body {
 
 .sign-up {
     background-color: #3882f6;
+    border-color: #3882f6;
     border-radius: 4px;
     border-width: 1px;
     border-style: solid;
     padding: 4px 12px;
+    color: #eee;
 }
 
 .sign-up.cta-button{
     border-color: #ffffff;
-    color: #eee;
+}
+
+.support {
+    width: 100%;
+}
+
+.reasons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
 .reasons h2 {
@@ -77,6 +125,16 @@ body {
   
 .quote {
     background-color: #e5e7eb;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.quote p {
+    border: solid;
+    border-width: 2px;
 }
 
 .quote .words {
@@ -85,12 +143,20 @@ body {
     font-style: italic;
 }
 
+.cta {
+    width: 60%;
+    flex: 0 1 auto;
+    margin: 60px;
+}
+
 .cta-card {
     background-color: #3882f6;
-    max-width: 300px;
     color: #eee;
     box-shadow: 2px 4px 16px rgba(0,0,0,.06);
     border-radius: 4px;
     padding: 16px;
     margin: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
   }
