--- a/style.css
+++ b/style.css
@@ -9,24 +9,20 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
-    min-height: 100vh;
-    width: 100%;
   }
   
 .hero-header {
-    font-size: 32px;
-    font-weight: 900;
     background: #1F2937;
+    border: solid;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 3%;
   }
 
 .header {
     display: flex;
     justify-content: space-between;
-    font-size: 32px;
-    font-weight: 900;
     width: 100%;
     max-width: 1200px;
   }
@@ -37,11 +33,15 @@ body {
     align-items: center;
 }
 
-.header .links {
+ul {
     list-style: none;
     gap: 18px;
     font-size: 18px;
     justify-content: flex-end;
+  }
+
+  a {
+    text-decoration: none;
   }
 
 .header a {
@@ -65,6 +65,7 @@ body {
 .hero h1 {
     font-size: 48px;
     color: #f9faf8;
+    font-weight: 800;
 }
 
 .hero p {
@@ -72,8 +73,14 @@ body {
     color: #e5e7eb;
 }
 
+.hero-left > *{
+    margin-bottom: 16px;
+}
+
 .hero-right {
     margin-left: auto;
+    max-width: 300px;
+    object-fit: cover;
 }
   
 .footer {
@@ -113,28 +120,60 @@ body {
 .reasons {
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
-    width: 100%;
+    min-height: 35vh;
+    padding: 3% 3%;
+    gap: 24px;
 }
 
 .reasons h2 {
     font-size: 36px;
-    font-weight: 900;
+    font-weight: 800;
     color: #1f2937;
 }
-  
+
+.reasons-card {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 48px
+}
+
+.reasons-card *{
+    color: #1F2937;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 6px;
+}
+
+.reasons-card img {
+    max-width: 100px;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+}
+
 .quote {
     background-color: #e5e7eb;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    min-height: 35vh;
     width: 100%;
+    padding: 3% 3%;
 }
 
-.quote p {
-    border: solid;
-    border-width: 2px;
+.quote-box {
+    display: flex;
+    flex-direction: column;
+    max-width: 800px;
+}
+
+.quote .person {
+    align-self: flex-end;
+    font-weight: 700;
 }
 
 .quote .words {
@@ -144,8 +183,7 @@ body {
 }
 
 .cta {
-    width: 60%;
-    flex: 0 1 auto;
+    width: 600px;
     margin: 60px;
 }
 
