--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
   
 .hero-header {
     background: #1F2937;
-    border: solid;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,7 +39,7 @@ ul {
     justify-content: flex-end;
   }
 
-  a {
+a { 
     text-decoration: none;
   }
 
@@ -73,14 +72,25 @@ ul {
     color: #e5e7eb;
 }
 
-.hero-left > *{
+.hero-left {
+    flex-shrink: 1;
+}
+
+.hero-left *{
     margin-bottom: 16px;
 }
 
 .hero-right {
+    flex-shrink: 2;
     margin-left: auto;
-    max-width: 300px;
+    min-width: 300px;
+}
+
+.hero-right img {
+    width: 100%;
+    height: auto;
     object-fit: cover;
+    vertical-align: bottom;
 }
   
 .footer {
@@ -149,7 +159,11 @@ ul {
 }
 
 .reasons-card img {
-    max-width: 100px;
+    border: solid;
+    border-color: #3881f666;
+    border-radius: 4px;
+    border-width: 2px;
+    max-width: 200px;
     aspect-ratio: 1 / 1;
     object-fit: cover;
 }
@@ -183,18 +197,29 @@ ul {
 }
 
 .cta {
-    width: 600px;
-    margin: 60px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 60px 0;
 }
 
 .cta-card {
+    flex: 0 1 600px;
     background-color: #3882f6;
     color: #eee;
     box-shadow: 2px 4px 16px rgba(0,0,0,.06);
     border-radius: 4px;
     padding: 16px;
-    margin: 0;
+    margin: 048px;
     display: flex;
     justify-content: space-around;
     align-items: center;
+  }
+
+  button {
+    flex-shrink: 0;
+  }
+
+  button a {
+    color: #f9faf8;
   }
